# libraries

./: .appveyor.yml  .clang-format  .clang-tidy  .clangd  .dockerignore  .gitignore  .gitmodules  .hyde-config  .travis.yml  CHANGES.md  CMakeLists.txt  CMakeLists.txt.bak  CMakePresets.json  CNAME  Gemfile  INSTALL.md  LICENSE  README.md  Setup.md  VERSION_TEST_RESULTS.md  _config.yml  about.md  about.sh  bs-config.js  build.py  build.sh  chat.md  conanfile.py  conanfile.txt  configure.sh  enhance_conan.sh  examples.md  extraneous-files.txt  generate_docs.sh  index.html  release.md  renames.sh  run_tests.py  serve.sh  setup_msvc.bat  (+8 more)
.github/: README.md  run.sh  (+4 more)
docs/: .codecov.yml  .gitignore  .ruby-version  CMakeLists.txt  CNAME  Gemfile  README.md  _config.yml  about.md  about.sh  bs-config.js  build.sh  chat.md  generate_docs.sh  index.html  index.md
docs/_data/: contributors.json  releases.json  tags.json
docs/_posts/: 2016-05-28-forest.md  2017-05-11-concurrency.md  2017-12-23-small-object-optimizations.md  2020-12-01-forest-introduction.md
docs/_sass/: _overrides-dark.scss  _overrides-light.scss  _overrides.scss
docs/_source/stlab-logo.graffle/: data.plist
docs/include/: index.md
docs/include/stlab/: index.md
docs/includes/: index.md
docs/includes/stlab/: index.md
docs/legacy/: abi-safe-library-theory-of-operation.md  about-boost-patches.md  adam-evolution.md  adding-a-user-to-the-asl-wiki.md  all-about-binding.md  annotated-list-of-boost-patches.md  build-matrix.md  coding-guidelines.md  compositing-models.md  conceptual-c.md  copy-on-write.md  current-design-rationale.md  daily-math-exercise.md  debugging-any_regular_t-and-short-names.md  dynamic-libraries.md  emacs-questions.md  eve-definitions-in-lua.md  future-ideas-and-designs.md  github-migration-and-status.md  how-to-write-a-simple-lexical-analyzer-or-parser.md  index.md  layout-terminology.md  locale-savvy-isspace.md  math-test.md  message-box-widget.md  modal-dialog-integration-kit.md  new-build-documentation.md  on-disk-file-monitor.md  papers-and-presentations.md  perforce-open-source-license.md  performance-analysis-example1.md  performance-analysis-example2.md  performance-analysis-examples.md  performance-home.md  performance-releasenotes.md  performance-whattotest.md  release-process.md  representational-equality.md  reveal-widget.md  segmented-iterators.md  (+7 more)
docs/legacy/figures/: xml_parser_example.cpp
docs/libraries/: for_each_argument_example.cpp  index.md
docs/libraries/concurrency/: index.md
docs/libraries/copy_on_write.hpp/: index.md
docs/libraries/enum_ops.hpp/: f_operator--.md  f_operator-.md  f_operator-3D.md  f_operator21.md  f_operator213D.md  f_operator25.md  f_operator253D.md  f_operator26.md  f_operator263D.md  f_operator2A.md  f_operator2A3D.md  f_operator2B.md  f_operator2B2B.md  f_operator2B3D.md  f_operator2F.md  f_operator2F3D.md  f_operator3C3C.md  f_operator3C3C3D.md  f_operator3D3D.md  f_operator3E3E.md  f_operator3E3E3D.md  f_operator5E.md  f_operator5E3D.md  f_operator7C.md  f_operator7C3D.md  f_operator~.md  f_stlab_enable_arithmetic_enum.md  f_stlab_enable_bitmask_enum.md  index.md
docs/libraries/forest.hpp/: f_child_begin.md  f_child_end.md  f_child_range.md  f_depth_range.md  f_filter_fullorder_range.md  f_find_edge.md  f_find_edge_reverse.md  f_find_parent.md  f_has_children.md  f_is_leading.md  f_is_trailing.md  f_leading_of.md  f_pivot.md  f_pivot_of.md  f_postorder_range.md  f_preorder_range.md  f_reverse_fullorder_range.md  f_trailing_of.md  index.md  stlab3A3Aforest_edge.md
docs/libraries/forest_algorithms.hpp/: f_equal_shape.md  f_flatten.md  f_transcribe.md  f_transcriber.md  f_unflatten.md  index.md
docs/libraries/functional.hpp/: f_unwrap.md  index.md
docs/libraries/iterator/: index.md
docs/libraries/memory.hpp/: f_make_weak_ptr.md  index.md
docs/libraries/pre_exit.hpp/: f_at_pre_exit.md  f_pre_exit.md  index.md
docs/libraries/scope.hpp/: f_scope.md  index.md  scope_example_return.cpp
docs/libraries/utility.hpp/: f_copy.md  f_for_each_argument.md  f_move.md  f_move_if.md  for_each_argument_example.cpp  index.md
docs/libraries/version.hpp/: index.md
docs/stlab.bbprojectd/: Scratchpad.txt  Unix Worksheet.worksheet  project.bbprojectdata
docs/tips/: index.md  library-coding-style.md  stop-using-out-arguments.md
docs/tools/docker-tools/: Dockerfile  README.md
docs/tools/docs/: prepare.sh  start.sh  update.sh
playground/: CMakeLists.txt  main.cpp
rustport/: CMakeLists.txt  Cargo.toml
rustport/cppshim/include/: bindings.hpp
rustport/src/: lib.rs  stlab.rs
rustport/src/stlab/: coarse_priority_queue.rs  drop_join_thread_pool.rs  mod.rs  notification_queue.rs  prioritized.rs  scoped_thread_pool.rs  waiter.rs
src/: CMakeLists.txt  default_executor.cpp  future.cpp  main_executor.cpp  pre_exit.cpp
src/concurrency/: default_executor.cpp
test/: CMakeLists.txt  actor_tests.cpp  channel_functor_tests.cpp  channel_join_tests.cpp  channel_merge_round_robin_tests.cpp  channel_merge_tests.cpp  channel_merge_unordered_tests.cpp  channel_merge_zip_with_tests.cpp  channel_process_tests.cpp  channel_test_helper.cpp  channel_test_helper.hpp  channel_tests.cpp  channel_zip_tests.cpp  coroutine_test.cpp  cow_test.cpp  executor_test.cpp  forest_test.cpp  future_copy_test.cpp  future_coroutine_test.cpp  future_coroutine_tests.cpp  future_recover_tests.cpp  future_reduction_tests.cpp  future_test_helper.cpp  future_test_helper.hpp  future_tests.cpp  future_then_tests.cpp  future_when_all_arguments_test.cpp  future_when_all_arguments_tests.cpp  future_when_all_range_tests.cpp  future_when_any_arguments_tests.cpp  future_when_any_range_tests.cpp  future_when_any_tests.cpp  main.cpp  sanitizer_suppressions  serial_queue_test.cpp  std_future_adaptor_test.cpp  system_timer_test.cpp  task_test.cpp  test_helper.cpp  test_helper.hpp  (+4 more)
test/source/: channel_functor_tests.cpp  channel_process_tests.cpp  cow_test.cpp  executor_test.cpp  future_when_all_range_tests.cpp  serial_queue_test.cpp  task_test.cpp  traits_test.cpp  tuple_algorithm_test.cpp
(+1680 files in other folders)
